# ClashFoFBot

./: .gitignore  Cargo.toml  LICENSE  README.md  aufteilung.txt  clear_dataset  clear_runs  link.txt  pytorchgpuinstaller.py  requirements.txt  setup  setup.sh  start  start.sh  todo.txt  venv_setup  windows_setup.sh  windows_start.sh
Communication/: data.json
Communication/TestBuildingsYOLOv8n/: data.json
Communication/TestLevelsYOLOv8n/: data.json
Communication/buildings/: data.json
dataset/: data.yaml
dataset/labels/: train.cache  val.cache
dataset/labels/train/: 2025-07-28_19-27-41.txt  2025-07-28_19-39-15.txt  2025-07-28_21-37-59.txt  2025-07-29_23-27-31.txt  2025-07-29_23-28-00.txt  2025-07-29_23-28-22.txt  iStock-1818178188.txt  images-2.txt
dataset_buildings/: data.yaml
dataset_buildings/labels/: train.cache  val.cache
dataset_buildings/labels/train/: 2025-07-28_19-27-41.txt  Nr0homejeskoprogrammierenClashFoFBotimagesth10_1GELG-119997519917751794268983004110019361722.txt  images-2.txt  images-3.txt  images.txt  md.txt  (+123 more)
dataset_level/: data.yaml
dataset_level/labels/: train.cache  val.cache
dataset_mauern/: data.yaml
dataset_mauern/labels/: train.cache  val.cache
images/: th10_1.html
random/: todo.txt
scripts/: clear_dataset.sh  clear_runs.sh  linux_setup  windows_setup.sh
src/: bot_actions.rs  data_augmentation.rs  debug.rs  filter_buildings.rs  helper.rs  image_data.py  image_data_wrapper.rs  main.rs  prelude.rs  screener.rs  screenshot.rs  settings_manager.rs  split_image.rs  tests.rs  threading.rs  ui.rs  walls.rs
(+244 files in other folders)
