[package]
name = "ClashFoFBot"
version = "0.1.0"
edition = "2021"

[dependencies]
device_query = "4.0.1"
eframe = "0.32.0"
rfd = "0.15.4"
image ="0.24.9" # NICHT VERÄNDERN!!!!! WAAAAAAAAAAAARUM BENUTZ BRO EINE ALTE VERSION????????? FOF GLEGLEGLEGLEGLEGL
screenshots = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.141"
chrono = "0.4.41"
rand = "0.9.2"
csv = "1.3.1"
strum = "0.27.2"
strum_macros = "0.27.2"
dyn-clone = "1.0.20"
regex = "1.11.1"
time = "0.3.41"
anyhow = "1.0"
uuid = { version = "1.3", features = ["v4"] }
egui_extras = "0.32.0"
